# kyros-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
include/: cdefs.h  string.h  strings.h  types.h
lib/libc/string/: memcpy.c  memmove.c  memset.c  strlen.c
lib/libc/strings/: bzero.c
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
