[package]
name = "kyros-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
conquer-once = { version = "0.3.2", default-features = false }
crossbeam-queue = { version = "0.3.6", features = ["alloc"], default-features = false }
futures-util = { version = "0.3.4", features = ["alloc"], default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.3"
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.3.0"
x86_64 = "0.14.10"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

# fixes a panic caused by recent qemu versions
[package.metadata.bootloader]
physical-memory-offset = "0x0000f00000000000"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
